[gd_scene load_steps=22 format=3 uid="uid://jdiyiwxj7kh0"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_jrsic"]
[ext_resource type="Texture2D" uid="uid://2pyc7tjeu5et" path="res://Assets/UI/GAME_LOGO_WHITE.png" id="2_5vvlb"]
[ext_resource type="Texture2D" uid="uid://dcecd6rbo2blp" path="res://Assets/UI/startbutton_1.png" id="3_wiek5"]
[ext_resource type="Texture2D" uid="uid://bde1l8ykv1rtx" path="res://Assets/UI/startbutton_5.png" id="4_uoro4"]
[ext_resource type="Texture2D" uid="uid://bcf4ifygghr1k" path="res://Assets/UI/OPENER COMIC/GAME_COMIC_PANEL1.png" id="5_a54ho"]
[ext_resource type="Texture2D" uid="uid://cr0k00imrx8au" path="res://Assets/UI/OPENER COMIC/GAME_COMIC_PANEL2.png" id="6_afy1m"]
[ext_resource type="Texture2D" uid="uid://cdauou7c8qwkk" path="res://Assets/UI/OPENER COMIC/GAME_COMIC_PANEL3.png" id="7_wbc7c"]
[ext_resource type="Texture2D" uid="uid://chpu7hodmmbuu" path="res://Assets/UI/QUIT_2.png" id="8_52c2e"]
[ext_resource type="Texture2D" uid="uid://y1a5d52xbq2a" path="res://Assets/UI/QUIT_1.png" id="9_i5odq"]
[ext_resource type="Texture2D" uid="uid://cmi2tok2niuud" path="res://Assets/UI/QUIT_3.png" id="10_rtivd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lryf2"]
texture = ExtResource("3_wiek5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gxmeb"]
texture = ExtResource("3_wiek5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yal6d"]
texture = ExtResource("3_wiek5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r767b"]
texture = ExtResource("4_uoro4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eqqvd"]
texture = ExtResource("8_52c2e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6oyoi"]
texture = ExtResource("8_52c2e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cgqex"]
texture = ExtResource("8_52c2e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5i33v"]
texture = ExtResource("9_i5odq")

[sub_resource type="Shortcut" id="Shortcut_8klix"]
events = [null]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cy8ve"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c58tn"]
bg_color = Color(0.890196, 0.886275, 0.882353, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrsic")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -865.0
offset_right = 2975.0
offset_bottom = 2160.0
grow_horizontal = 0
scale = Vector2(0.225, 0.225)
texture = ExtResource("2_5vvlb")
expand_mode = 1
stretch_mode = 4

[node name="StartButton" type="Button" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -597.0
offset_top = -380.0
offset_right = 597.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(640, 270)
theme_override_styles/focus = SubResource("StyleBoxTexture_lryf2")
theme_override_styles/hover = SubResource("StyleBoxTexture_gxmeb")
theme_override_styles/pressed = SubResource("StyleBoxTexture_yal6d")
theme_override_styles/normal = SubResource("StyleBoxTexture_r767b")
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="StartButton"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -57.5
offset_top = -65.5
offset_right = 57.5
offset_bottom = 65.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
step = 0.1
fill_mode = 6
texture_under = ExtResource("4_uoro4")
texture_progress = ExtResource("3_wiek5")

[node name="QuitButton" type="Button" parent="."]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -234.0
offset_top = -380.0
offset_right = 960.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
pivot_offset = Vector2(597, 270)
theme_override_styles/focus = SubResource("StyleBoxTexture_eqqvd")
theme_override_styles/hover = SubResource("StyleBoxTexture_6oyoi")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cgqex")
theme_override_styles/normal = SubResource("StyleBoxTexture_5i33v")
shortcut = SubResource("Shortcut_8klix")

[node name="TextureProgressBar" type="TextureProgressBar" parent="QuitButton"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
step = 0.1
fill_mode = 6
texture_under = ExtResource("10_rtivd")
texture_progress = ExtResource("8_52c2e")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cy8ve")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c58tn")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -593.0
offset_top = -472.0
offset_right = 321.0
offset_bottom = 896.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.675, 0.675)
texture = ExtResource("5_a54ho")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 46.0
offset_top = -408.0
offset_right = 860.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.675, 0.675)
texture = ExtResource("6_afy1m")

[node name="TextureRect3" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = 32.0
offset_right = 926.0
offset_bottom = 618.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.675, 0.675)
texture = ExtResource("7_wbc7c")

[connection signal="button_down" from="StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_down" from="QuitButton" to="." method="_on_quit_button_button_down"]
[connection signal="button_up" from="QuitButton" to="." method="_on_quit_button_button_up"]
